--- a/gitlab-etc-master/registry/docker-compose.yml
+++ b/gitlab-etc-master/registry/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - traefik.enable=true
       - traefik.docker.network=publish_network
       - traefik.http.services.registry.loadbalancer.server.port=5000
-      - traefik.http.routers.registry.rule=Host(`reg.parafacc.ir`) && PathPrefix(`/v2`)
+      - traefik.http.routers.registry.rule=Host(`reg.domain.com`) && PathPrefix(`/v2`)
       - traefik.http.routers.registry.service=registry
       - traefik.http.routers.registry.entrypoints=websecure
       - traefik.http.routers.registry.tls.certresolver=letsencrypt
@@ -38,13 +38,13 @@ services:
       - "80"
     environment:
       - REGISTRY_TITLE=Paraf Docker Registry
-      - REGISTRY_URL=https://reg.parafacc.ir
+      - REGISTRY_URL=https://reg.domain.com
       - SINGLE_REGISTRY=true
     labels:
       - traefik.enable=true
       - traefik.docker.network=publish_network
       - traefik.http.services.registry_ui.loadbalancer.server.port=80
-      - traefik.http.routers.registry_ui.rule=Host(`reg.parafacc.ir`)
+      - traefik.http.routers.registry_ui.rule=Host(`reg.domain.com`)
       - traefik.http.routers.registry_ui.service=registry_ui
       - traefik.http.routers.registry_ui.entrypoints=websecure
       - traefik.http.routers.registry_ui.tls.certresolver=letsencrypt
