Update and rename paraf_registry.conf to pregistry.conf

--- a/gitlab-etc-master/registry/pregistry.conf
+++ b/gitlab-etc-master/registry/pregistry.conf
@@ -1,7 +1,7 @@
 # https://www.nginx.com/blog/using-free-ssltls-certificates-from-lets-encrypt-with-nginx/#:~:text=certbot%20can%20automatically%20configure%20NGINX,is%20www.example.com.
 server {
     # root /var/www/registry;
-    server_name reg.parafacc.ir ;
+    server_name reg.domain.com ;
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
@@ -47,14 +47,14 @@ location /v2 {
 
 server {
    
-    if ($host = reg.parafacc.ir) {
+    if ($host = reg.domain.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
     listen 80 default_server;
     listen [::]:80 default_server;
-    server_name reg.parafacc.ir;
+    server_name reg.domain.com;
     return 404; # managed by Certbot
 
 }
