--- a/gitlab-etc-master/monitoring/docker-compose.yml
+++ b/gitlab-etc-master/monitoring/docker-compose.yml
@@ -84,8 +84,8 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_DOMAIN=mon.parafacc.ir
-      - GF_SERVER_ROOT_URL=http://mon.parafacc.ir
+      - GF_SERVER_DOMAIN=mon.domain.com
+      - GF_SERVER_ROOT_URL=http://mon.domain.com
     restart: unless-stopped
     expose:
       - 3000
@@ -95,7 +95,7 @@ services:
       org.label-schema.group: "monitoring"
       traefik.enable: true
       traefik.http.services.grafana.loadbalancer.server.port: 3000
-      traefik.http.routers.grafana.rule: Host(`mon.parafacc.ir`)
+      traefik.http.routers.grafana.rule: Host(`mon.domain.com`)
       traefik.http.routers.grafana.service: grafana
       traefik.http.routers.grafana.entrypoints: websecure
       traefik.http.routers.grafana.tls.certresolver: letsencrypt
